crates/tefas-ffi/include/tefas_ffi.h

#ifndef TEFAS_FFI_H
#define TEFAS_FFI_H

#pragma once

/* Auto-generated by cbindgen. Do not edit manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

char *tefas_version(void);

void tefas_free_string(char *ptr);

int32_t tefas_parse_document_json(const char *html, char **out_json, char **out_err);

int32_t tefas_fetch_text_default(const char *url, char **out_text, char **out_err);

int32_t tefas_query_operation_json_default(const char *operation_name,
                                           const char *payload_json,
                                           char **out_json,
                                           char **out_err);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* TEFAS_FFI_H */